--- a/Graphics-ZedGraph-master/MyForm.resx
+++ b/Graphics-ZedGraph-master/MyForm.resx
@@ -153,4 +153,50 @@
   <metadata name="SIC.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="i.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="x_i.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="u_i.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="z_i.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="u2_i.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="z2_i.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="LEE.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column_h_i.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="SDC.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="SIC.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="label11.Text" xml:space="preserve">
+    <value>Груз массы m может совершать прямолинейные перемещения по горизонтальной плоскости вдоль оси абсцисс. Трение отсутствует. Для стабилизации положения груза используется система с подвеской:
+пружина постоянной жесткости k, демпфер с коэффициентом демпфирования c и пружина с нелинейной характеристикой k*, которые при отклонении груза от равновесного положения создают силы,
+восстанавливающие равновесие. Пружина с характеристикой k создает силу, пропорциональную смещению груза, пружина с характеристикой k*– силу, пропорциональную третьей степени смещения
+(указанные силы действуют в направлении, противоположном смещению), демпфер – силу, пропорциональную скорости (в направлении, противоположном скорости). Положение груза в системе с
+подвеской описывает нелинейное дифференциальное уравнение
+m u'' + cu' + ku +k*u 3 = 0;
+u(x0) = u0 ; u'(x0) = u'0 .
+где u(x) – смещение груза вдоль оси абсцисс относительно положения равновесия, x – время, u0 – начальное отклонение груза от равновесия и u'0 – его начальная скорость.</value>
+  </data>
 </root>
